--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,7 +1,70 @@
-<h1>Eventos!</h1>
+<h2>Eventos!</h2>
+<hr />
 
-<div *ngFor="let evento of eventos">
-  <p><b>Tema:</b> {{evento.tema}}</p>
-  <p><b>Local:</b> {{evento.local}}</p>
-  <hr>
+<div class="form-inline">
+  <div class="d-flex align-items-center input-group w-auto d-inline-flex mb-2 g-3">
+    <label for="buscar" class="me-2">Filtro: </label>
+    <input
+    id="buscar"
+      type="text"
+      class="form-control w-auto"
+      placeholder="Buscar"
+      aria-label="Buscar"
+      aria-describedby="button-addon2"
+      [(ngModel)]="filtroLista"
+    />
+  </div>
 </div>
+<!-- <h3>Filtro: {{filtroLista}}</h3> -->
+<table class="table table-striped">
+  <thead class="table-dark">
+    <tr>
+      <th>
+        <button
+          class="btn btn-outline-light btn-sm"
+          (click)="isCollapsed = !isCollapsed"
+        >
+          {{isCollapsed ? 'exibir' : 'ocultar'}}
+        </button>
+      </th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opçoes</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="eventos && eventos.length">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <td>
+        <img
+          src="/assets/{{ evento.imagemURL }}"
+          [alt]="evento.tema"
+          [style.width.px]="widthImg"
+          [style.margin.px]="marginImg"
+          [collapse]="isCollapsed"
+          [isAnimated]="true"
+        />
+      </td>
+      <td>{{ evento.eventoId }}</td>
+      <td>{{ evento.tema }}</td>
+      <td>{{ evento.local }}</td>
+      <td>{{ evento.dataEvento }}</td>
+      <td>{{ evento.qtdPessoas }}</td>
+      <td>{{ evento.lote }}</td>
+      <td>
+        <button class="btn btn-primary btn-sm me-2">Editar</button>
+        <button class="btn btn-danger btn-sm">Excluir</button>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot *ngIf="!eventos.length">
+    <tr>
+      <td colspan="8" class="text-center">
+        <h4>Nenhum evento encontrado!</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
